[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/file_save.gd" type="Script" id=1]
[ext_resource path="res://ItemAddButton.gd" type="Script" id=2]
[ext_resource path="res://src/GridInventory.gd" type="Script" id=3]

[node name="PanelContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 593.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 486.0
margin_bottom = 20.0
alignment = 1

[node name="BtnLoadSave" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 159.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Load Save File"

[node name="BtnToPlaintext" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 163.0
margin_right = 322.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Save to Plain Text"

[node name="BtnToEncrypted" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 326.0
margin_right = 486.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Re-Encrypt Save Data"

[node name="HBoxPassphrase" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 486.0
margin_bottom = 48.0
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxPassphrase"]
margin_top = 5.0
margin_right = 133.0
margin_bottom = 19.0
text = "Custom Passphrase: "

[node name="TxtEditPassphrase" type="LineEdit" parent="VBoxContainer/HBoxPassphrase"]
margin_left = 137.0
margin_right = 195.0
margin_bottom = 24.0
expand_to_text_length = true

[node name="BtnPassphraseUpdate" type="Button" parent="VBoxContainer/HBoxPassphrase"]
margin_left = 199.0
margin_right = 486.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Update"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 486.0
margin_bottom = 56.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 486.0
margin_bottom = 140.0
size_flags_horizontal = 3
columns = 4

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 135.0
margin_bottom = 19.0
text = "Money: "
align = 2

[node name="TxtMoney" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 139.0
margin_right = 197.0
margin_bottom = 24.0
expand_to_text_length = true

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 201.0
margin_top = 5.0
margin_right = 334.0
margin_bottom = 19.0
text = "Farming Experience: "
align = 2

[node name="TxtFarmingExp" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 338.0
margin_right = 396.0
margin_bottom = 24.0
expand_to_text_length = true

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 135.0
margin_bottom = 47.0
text = "Mining Experience: "
align = 2

[node name="TxtMiningExp" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 139.0
margin_top = 28.0
margin_right = 197.0
margin_bottom = 52.0
expand_to_text_length = true

[node name="Label4" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 201.0
margin_top = 33.0
margin_right = 334.0
margin_bottom = 47.0
text = "Fishing Experience: "
align = 2

[node name="TxtFishingExp" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 338.0
margin_top = 28.0
margin_right = 396.0
margin_bottom = 52.0
expand_to_text_length = true

[node name="Label5" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 61.0
margin_right = 135.0
margin_bottom = 75.0
text = "Foraging Experience: "
align = 2

[node name="TxtForagingExp" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 139.0
margin_top = 56.0
margin_right = 197.0
margin_bottom = 80.0
expand_to_text_length = true

[node name="Label6" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 201.0
margin_top = 61.0
margin_right = 334.0
margin_bottom = 75.0
text = "Crafting Experience: "
align = 2

[node name="TxtCraftingExp" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 338.0
margin_top = 56.0
margin_right = 396.0
margin_bottom = 80.0
expand_to_text_length = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 486.0
margin_bottom = 148.0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 486.0
margin_bottom = 176.0
size_flags_horizontal = 3
dragger_visibility = 1

[node name="VBoxInventory" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
margin_right = 237.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxInventory"]
margin_right = 237.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/VBoxInventory/HBoxContainer"]
margin_top = 3.0
margin_right = 144.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Player Inventory"
align = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HSplitContainer/VBoxInventory/HBoxContainer"]
margin_left = 148.0
margin_right = 237.0
margin_bottom = 20.0
text = "Add Item"
script = ExtResource( 2 )

[node name="GridInventory" type="GridContainer" parent="VBoxContainer/HSplitContainer/VBoxInventory"]
margin_top = 24.0
margin_right = 237.0
margin_bottom = 24.0
columns = 6
script = ExtResource( 3 )

[node name="VBoxChest" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
margin_left = 249.0
margin_right = 486.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxChest"]
margin_right = 237.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/VBoxChest/HBoxContainer"]
margin_top = 3.0
margin_right = 144.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Storage Inventory"
align = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HSplitContainer/VBoxChest/HBoxContainer"]
margin_left = 148.0
margin_right = 237.0
margin_bottom = 20.0
text = "Add Item"
script = ExtResource( 2 )

[node name="GridChest" type="GridContainer" parent="VBoxContainer/HSplitContainer/VBoxChest"]
margin_top = 24.0
margin_right = 237.0
margin_bottom = 24.0
columns = 6
script = ExtResource( 3 )

[node name="LoadSaveDialog" type="FileDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 593.0
size_flags_vertical = 3
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
show_hidden_files = true

[node name="SavePlaintextDialog" type="FileDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 593.0
size_flags_vertical = 3
popup_exclusive = true
resizable = true
access = 2
show_hidden_files = true

[node name="SaveSaveDialog" type="FileDialog" parent="."]
margin_right = 486.0
margin_bottom = 586.0
size_flags_vertical = 3
popup_exclusive = true
resizable = true
access = 2
show_hidden_files = true

[connection signal="resized" from="." to="." method="_on_PanelContainer_resized"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/BtnLoadSave" to="." method="_on_BtnLoadSave_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/BtnToPlaintext" to="." method="_on_BtnToPlaintext_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/BtnToEncrypted" to="." method="_on_BtnToEncrypted_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxPassphrase/BtnPassphraseUpdate" to="." method="_on_BtnPassphraseUpdate_pressed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/TxtMoney" to="." method="_on_TxtMoney_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/TxtFarmingExp" to="." method="_on_TxtFarmingExp_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/TxtMiningExp" to="." method="_on_TxtMiningExp_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/TxtFishingExp" to="." method="_on_TxtFishingExp_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/TxtForagingExp" to="." method="_on_TxtForagingExp_text_changed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/TxtCraftingExp" to="." method="_on_TxtCraftingExp_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/VBoxInventory/HBoxContainer/OptionButton" to="VBoxContainer/HSplitContainer/VBoxInventory/HBoxContainer/OptionButton" method="_on_OptionButton_item_selected"]
[connection signal="item_selected_id" from="VBoxContainer/HSplitContainer/VBoxInventory/HBoxContainer/OptionButton" to="VBoxContainer/HSplitContainer/VBoxInventory/GridInventory" method="_on_OptionButton_item_selected_id"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/VBoxChest/HBoxContainer/OptionButton" to="VBoxContainer/HSplitContainer/VBoxChest/HBoxContainer/OptionButton" method="_on_OptionButton_item_selected"]
[connection signal="item_selected_id" from="VBoxContainer/HSplitContainer/VBoxChest/HBoxContainer/OptionButton" to="VBoxContainer/HSplitContainer/VBoxChest/GridChest" method="_on_OptionButton_item_selected_id"]
[connection signal="file_selected" from="LoadSaveDialog" to="." method="_on_LoadSaveDialog_file_selected"]
[connection signal="file_selected" from="SavePlaintextDialog" to="." method="_on_SavePlaintextDialog_file_selected"]
[connection signal="file_selected" from="SaveSaveDialog" to="." method="_on_SaveSaveDialog_file_selected"]
